--- a/BannerlordRestartPlus/_Module/ModuleData/Languages/std_dialogs.xml
+++ b/BannerlordRestartPlus/_Module/ModuleData/Languages/std_dialogs.xml
@@ -7,5 +7,7 @@
         <string id="restart_plus_01" text="Restart+." />
         <string id="restart_plus_02" text="Are you sure you want to start over with a new character in this game world?" />
         <string id="restart_plus_03" text="The game needs to be restarted to avoid potential crashes. Do you want to close the game now?" />
+        <string id="restart_plus_04" text="Play As" />
+        <string id="restart_plus_05" text="Are you sure you want to play as {CHARACTER} in this game world?" />
     </strings>
 </base>
